# trunk-recorder-plugin

./: CMakeLists.txt  config.json
example_plugin/: CMakeLists.txt  example_plugin.cc
unit_script/: CMakeLists.txt  unit_script.cc
